add drivers to project

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,7 @@
 webdriver.driver=chrome
 
-webdriver.chrome.driver = C:\\Users\\Kiran Parepalli\\Downloads\\chromedriver_win32\\chromedriver.exe
-webdriver.gecko.driver =C:\\Users\\Kiran Parepalli\\Downloads\\serenity-demos-master\\TestProject\\drivers\\geckodriver.exe
+webdriver.chrome.driver = src\\test\\resources\\drivers\\chrome\\win32\\chromedriver.exe
+webdriver.gecko.driver = src\\test\\resources\\drivers\\gecko\\win32\\geckodriver.exe
 
 serenity.project.name = Test Project using Selenium, Cucumber + gherkin(for simple english test cases), Serenity(for reporting)
 
